--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ google-auth==2.29.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2>=0.2.0
 google-api-python-client==2.125.0
+youtube-search-python==1.6.5
+pytubefix==6.10.1
+httpx==0.27.0
